# Page2Card

./: .env.example  .gitignore  AGENTS.md  PAGE2CARD_ISSUE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/page2card/: __init__.py  config.py  database.py  main.py  models.py  repository.py  styles.py
src/page2card/services/: __init__.py  ai.py  extractor.py  fetcher.py
src/page2card/static/: cards.js  styles.css
src/page2card/templates/: article_detail.html  base.html  index.html  not_found.html
tests/: conftest.py  test_extractor.py  test_fetcher.py  test_repository.py  test_routes.py
tests/fixtures/: article.html
